--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -39,6 +39,7 @@
      <Compile Include="Assets\Scripts\AxisConfig.cs" />
      <Compile Include="Assets\Scripts\CameraManager.cs" />
      <Compile Include="Assets\Scripts\CameraMovement.cs" />
+     <Compile Include="Assets\Scripts\DraggingManager.cs" />
      <Compile Include="Assets\Scripts\Manager.cs" />
      <Compile Include="Assets\Scripts\ValueController.cs" />
     <Reference Include="UnityEngine">
