move joint to axis

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -36,7 +36,7 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\AxisConfig.cs" />
+     <Compile Include="Assets\Scripts\Axis.cs" />
      <Compile Include="Assets\Scripts\CameraManager.cs" />
      <Compile Include="Assets\Scripts\CameraMovement.cs" />
      <Compile Include="Assets\Scripts\DraggingManager.cs" />
