--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -42,7 +42,9 @@
      <Compile Include="Assets\Scripts\DraggingManager.cs" />
      <Compile Include="Assets\Scripts\Kinematics.cs" />
      <Compile Include="Assets\Scripts\Manager.cs" />
+     <Compile Include="Assets\Scripts\TargetMovement.cs" />
      <Compile Include="Assets\Scripts\ValueController.cs" />
+     <Compile Include="Assets\Scripts\WIreArc.cs" />
     <Reference Include="UnityEngine">
         <HintPath>D:/programs/unity/2019.4.3f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
